--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 .DS_Store
 *.log
-bower_components/
-build/
-components/
 coverage/
 node_modules/
-build.js
+unist-util-is.js
+unist-util-is.min.js
