--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "browserify": "^14.0.0",
     "esmangle": "^1.0.1",
     "nyc": "^10.0.0",
-    "remark-cli": "^2.0.0",
-    "remark-preset-wooorm": "^1.0.0",
+    "remark-cli": "^3.0.0",
+    "remark-preset-wooorm": "^2.0.0",
     "tape": "^4.0.0",
     "xo": "^0.17.1"
   },
   "scripts": {
-    "build-md": "remark . --quiet --frail --output",
+    "build-md": "remark . -qfo",
     "build-bundle": "browserify index.js --bare -s unistUtilIs > unist-util-is.js",
     "build-mangle": "esmangle < unist-util-is.js > unist-util-is.min.js",
     "build": "npm run build-md && npm run build-bundle && npm run build-mangle",
@@ -55,6 +55,6 @@
     "branches": 100
   },
   "remarkConfig": {
-    "presets": "wooorm"
+    "plugins": ["preset-wooorm"]
   }
 }
