--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "esmangle": "^1.0.1",
     "nyc": "^10.0.0",
     "remark-cli": "^3.0.0",
-    "remark-preset-wooorm": "^2.0.0",
+    "remark-preset-wooorm": "^3.0.0",
     "tape": "^4.0.0",
-    "xo": "^0.17.1"
+    "xo": "^0.18.1"
   },
   "scripts": {
     "build-md": "remark . -qfo",
@@ -44,6 +44,10 @@
   },
   "xo": {
     "space": true,
+    "esnext": false,
+    "rules": {
+      "unicorn/prefer-type-error": "off"
+    },
     "ignore": [
       "unist-util-is.js"
     ]
@@ -55,6 +59,8 @@
     "branches": 100
   },
   "remarkConfig": {
-    "plugins": ["preset-wooorm"]
+    "plugins": [
+      "preset-wooorm"
+    ]
   }
 }
