--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   ],
   "repository": "syntax-tree/unist-util-is",
   "bugs": "https://github.com/syntax-tree/hast-util-to-html/issues",
-  "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+  "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
-    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
+    "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
   "files": [
     "index.js"
