types: add typing for convert
Co-authored-by: Junyoung Choi <fluke8259@gmail.com>

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "files": [
     "index.js",
     "convert.js",
-    "types/index.d.ts"
+    "types/index.d.ts",
+    "types/convert.d.ts"
   ],
   "types": "types/index.d.ts",
   "dependencies": {},
