--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   ],
   "repository": "syntax-tree/unist-util-is",
   "bugs": "https://github.com/syntax-tree/unist-util-is/issues",
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/unified"
+  },
   "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
