--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "unist-util-is",
   "version": "4.0.1",
-  "description": "Utility to check if a node passes a test",
+  "description": "unist utility to check if a node passes a test",
   "license": "MIT",
   "keywords": [
     "unist",
+    "unist-util",
+    "util",
+    "utility",
+    "tree",
     "node",
     "is",
     "equal",
+    "check",
     "test",
-    "type",
-    "util",
-    "utility"
+    "type"
   ],
   "repository": "syntax-tree/unist-util-is",
   "bugs": "https://github.com/syntax-tree/unist-util-is/issues",
