--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
     "browserify": "^16.0.0",
     "dtslint": "^3.0.0",
     "nyc": "^15.0.0",
-    "prettier": "^1.0.0",
-    "remark-cli": "^7.0.0",
-    "remark-preset-wooorm": "^6.0.0",
-    "tape": "^4.0.0",
+    "prettier": "^2.0.0",
+    "remark-cli": "^8.0.0",
+    "remark-preset-wooorm": "^7.0.0",
+    "tape": "^5.0.0",
     "tinyify": "^2.0.0",
-    "unified": "^8.0.0",
-    "xo": "^0.26.0"
+    "unified": "^9.0.0",
+    "xo": "^0.32.0"
   },
   "scripts": {
-    "format": "remark . -qfo && prettier --write \"**/*.{js,ts}\" && xo --fix",
+    "format": "remark . -qfo && prettier . --write && xo --fix",
     "build-bundle": "browserify . -s unistUtilIs > unist-util-is.js",
     "build-mangle": "browserify . -s unistUtilIs -p tinyify > unist-util-is.min.js",
     "build": "npm run build-bundle && npm run build-mangle",
@@ -74,6 +74,7 @@
       "unicorn/prefer-reflect-apply": "off"
     },
     "ignore": [
+      "*.ts",
       "unist-util-is.js"
     ]
   },
