Add support for a nullish test in types
Reviewed-by: Junyoung Choi <fluke8259@gmail.com> 
Reviewed-by: Christian Murphy <christian.murphy.42@gmail.com>
Reviewed-by: Titus Wormer <tituswormer@gmail.com>

Closes GH-11.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
-    "Christian Murphy <christian.murphy.42@gmail.com>"
+    "Christian Murphy <christian.murphy.42@gmail.com>",
+    "Lucas Brandstaetter <lucas@brandstaetter.tech> (https://github.com/Roang-zero1)"
   ],
   "files": [
     "index.js",
