--- a/package.json
+++ b/package.json
@@ -28,37 +28,32 @@
     "Christian Murphy <christian.murphy.42@gmail.com>",
     "Lucas Brandstaetter <lucas@brandstaetter.tech> (https://github.com/Roang-zero1)"
   ],
-  "files": [
-    "index.js",
-    "convert.js",
-    "index.d.ts",
-    "convert.d.ts"
-  ],
+  "sideEffects": false,
+  "type": "module",
+  "main": "index.js",
   "types": "index.d.ts",
+  "files": [
+    "index.d.ts",
+    "index.js"
+  ],
   "devDependencies": {
     "@types/mdast": "^3.0.0",
-    "browserify": "^17.0.0",
+    "c8": "^7.0.0",
     "dtslint": "^4.0.0",
     "fast-check": "^2.0.0",
     "lodash": "^4.0.0",
-    "nyc": "^15.0.0",
     "prettier": "^2.0.0",
     "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
     "tape": "^5.0.0",
-    "tinyify": "^3.0.0",
     "unified": "^9.0.0",
     "xo": "^0.38.0"
   },
   "scripts": {
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
-    "build-bundle": "browserify . -s unistUtilIs -o unist-util-is.js",
-    "build-mangle": "browserify . -s unistUtilIs -o unist-util-is.min.js -p tinyify",
-    "build": "npm run build-bundle && npm run build-mangle",
-    "test-api": "node test",
-    "test-coverage": "nyc --reporter lcov tape test",
-    "test-types": "dtslint .",
-    "test": "npm run format && npm run build && npm run test-coverage && npm run test-types"
+    "test-api": "node test/index.js",
+    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test/index.js",
+    "test": "npm run format && npm run test-coverage"
   },
   "prettier": {
     "tabWidth": 2,
@@ -70,32 +65,13 @@
   },
   "xo": {
     "prettier": true,
-    "esnext": false,
     "rules": {
-      "@typescript-eslint/no-unused-expressions": "off",
-      "eqeqeq": [
-        "error",
-        "always",
-        {
-          "null": "ignore"
-        }
-      ],
-      "max-params": "off",
-      "no-eq-null": "off",
-      "unicorn/prefer-number-properties": "off",
-      "unicorn/prefer-reflect-apply": "off",
-      "unicorn/prefer-type-error": "off"
+      "no-var": "off",
+      "prefer-arrow-callback": "off"
     },
     "ignore": [
-      "*.ts",
-      "unist-util-is.js"
+      "*.ts"
     ]
-  },
-  "nyc": {
-    "check-coverage": true,
-    "lines": 100,
-    "functions": 100,
-    "branches": 100
   },
   "remarkConfig": {
     "plugins": [
