--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,23 @@
 {
+  "files": ["index.js"],
+  "include": ["*.js"],
   "compilerOptions": {
-    "lib": ["es2015"],
-    "strict": true,
+    "target": "ES2020",
+    "lib": ["ES2020"],
+    "module": "ES2020",
+    "moduleResolution": "node",
+    "allowJs": true,
+    "checkJs": true,
+    "noEmit": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "noImplicitAny": false,
+    "noImplicitThis": false,
+    "strictNullChecks": false,
+    "strictFunctionTypes": false,
     "baseUrl": ".",
     "paths": {
-      "unist-util-is": ["index.d.ts"],
-      "unist-util-is/convert": ["convert.d.ts"]
+      "unist-util-is": ["./index.d.ts"]
     }
   }
 }
