Refactor code-style
*   Add more docs to JSDoc
*   Add support for `null` in input of API types

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   },
   "remarkConfig": {
     "plugins": [
-      "preset-wooorm"
+      "remark-preset-wooorm"
     ]
   },
   "typeCoverage": {
