Adds unist to the dependencies
Signed-off-by: Maël Nison <nison.mael@gmail.com>

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "index.d.ts",
     "index.js"
   ],
+  "dependencies": {
+    "@types/unist": "^2.0.0"
+  },
   "devDependencies": {
     "@types/lodash": "^4.0.0",
     "@types/mdast": "^3.0.0",
