--- a/package.json
+++ b/package.json
@@ -41,19 +41,15 @@
     "@types/unist": "^2.0.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.0.0",
     "@types/mdast": "^3.0.0",
     "@types/node": "^20.0.0",
     "c8": "^8.0.0",
-    "fast-check": "^3.0.0",
-    "lodash": "^4.0.0",
     "prettier": "^2.0.0",
     "remark-cli": "^11.0.0",
     "remark-preset-wooorm": "^9.0.0",
     "tsd": "^0.28.0",
     "type-coverage": "^2.0.0",
     "typescript": "^5.0.0",
-    "unified": "^10.0.0",
     "xo": "^0.54.0"
   },
   "scripts": {
@@ -80,10 +76,25 @@
   "typeCoverage": {
     "atLeast": 100,
     "detail": true,
+    "#": "needed `any`s",
+    "ignoreFiles": [
+      "lib/index.d.ts"
+    ],
     "ignoreCatch": true,
     "strict": true
   },
   "xo": {
+    "overrides": [
+      {
+        "files": [
+          "**/*.ts"
+        ],
+        "rules": {
+          "@typescript-eslint/consistent-type-definitions": "off",
+          "@typescript-eslint/no-unnecessary-type-arguments": "off"
+        }
+      }
+    ],
     "prettier": true
   }
 }
